# Judica

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT.md  AUDIT_REPORT.ipynb  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  DOCUMENTATION.md  Dockerfile  LICENSE  README.MD  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  council.db  debug_roadmap.md  doc.md  docker-compose.yml  drizzle.config.ts  ecosystem.config.cjs  errors.txt  eslint.config.js  fix_deliberation.js  fix_lint.mjs  fix_lint_final.cjs  install.sh  list.md  orchestrator.ts  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  prometheus.yml  render.yaml  todo.md  tsconfig.json  vitest.config.ts  (+1 more)
.github/: dependabot.yml
aibyai_frontend/: package.json
cli/: package-lock.json  package.json
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs
docs/: API.md  CONTRIBUTING.md  DOCUMENTATION.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md
drizzle/: 0000_overrated_human_robot.sql
electron/: package-lock.json  package.json  tsconfig.json
frontend/: check_css.cjs  eslint.config.js  fix-imports.cjs  index.html  package-lock.json  package.json  react-router.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
k8s/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  hpa.yaml  (+6 more)
(+1505 files in other folders)
